playbooks/vars/portworx-admin-network-policy.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: deny-pure-storage-api
spec:
  priority: 10
  subject:
    namespaces:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: [portworx]
  egress:
    - name: deny-pure-api
      action: Deny
      to:
        - networks:
            - "10.3.11.50/32"
